...

protocol WMNewMessgaeViewDelegate: AnyObject {
    func sendMessage(_ message: String)
}

class WMNewMessageView: UIView {
    @IBOutlet var inputTextView: UITextView!
    @IBOutlet var sendMessageButton: UIButton!
    
    weak var delegate: WMNewMessgaeViewDelegate?
    
    private let maxHeight: CGFloat = WMNewMessageConstants.maxHeight
    
    private var isOversized: Bool  = false {
...
